[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
compiler = { path = "../compiler" }
console_error_panic_hook = "0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0"
wasm-bindgen = "0"
